@@ -1,3 +1,5 @@
+HEAD
+	+ Unallow edition of interface in rules until it is supported
 3.2.2
 	+ Added missing EBox::Exceptions uses
 3.2.1
